--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,57 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-8-08.GIF
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-8-05.GIF
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-7-08.gif
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-7-05.gif
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-6-08.GIF
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-6-05.gif
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-5.gif
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-4.gif
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-3.gif
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-2.gif
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-1-ssrs.gif
+BarcodeLib_NETBarcode_Trial/files/images/reportingconfig-1-net.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-9.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-8.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-7.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-6.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-5.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-4.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-3.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-27.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-26.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-25.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-24.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-23.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-22.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-21.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-20.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-2.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-19.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-17.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-16.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-15.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-14.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-13.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-12.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-11.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-10.gif
+BarcodeLib_NETBarcode_Trial/files/images/rdlcconfig-1.gif
+BarcodeLib_NETBarcode_Trial/files/images/datasource-5.gif
+BarcodeLib_NETBarcode_Trial/files/images/datasource-4.gif
+BarcodeLib_NETBarcode_Trial/files/images/datasource-3.gif
+BarcodeLib_NETBarcode_Trial/files/images/datasource-2.gif
+BarcodeLib_NETBarcode_Trial/files/images/datasource-1.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-9.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-8.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-7.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-6.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-5.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-4.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-3.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-2.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-11.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-100.gif
+BarcodeLib_NETBarcode_Trial/files/images/crystalconfig-10.gif
